--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,16 @@
+body {
+    background: #F8F6F4;
+}
+
 #root {
-    max-width: 1280px;
     margin: 0 auto;
-    padding: 2rem;
     text-align: center;
+    border: solid 2px black;
+    background: #E3F4F4;
+}
+
+button {
+    outline: none;
+    background: transparent;
+    border: 1px solid transparent;
 }
